--- a/frontend/src/layouts/index.css
+++ b/frontend/src/layouts/index.css
@@ -1,15 +1,20 @@
 
-.normal {
-  font-family: Georgia, sans-serif;
+.logo{
+  color: white;
+  cursor: pointer;
   text-align: center;
+  padding: 20px;
+  transition: 0.5s all;
 }
 
-.title {
-  font-size: 2.5rem;
-  font-weight: normal;
-  letter-spacing: -1px;
-  background: darkslateblue;
-  padding: .6em 0;
-  color: white;
-  margin: 0;
+.logoHide{
+  opacity: 0;
+  padding: 20px;
+
+}
+
+.trigger{
+  margin-left: 10px;
+  cursor: pointer;
+  font-size: 18px;
 }
